# type-southside-weekly-shotspotter

./: README.md  pyproject.toml
data/clean/: README.md
data/raw/: README.md
shotspotter/: __init__.py  settings.py
shotspotter/data/: README.md
shotspotter/data/clean/: reckless_firearm_discharges_2023_2024.csv  shooting_victimizations_2023_2024.csv
shotspotter/data/final/: README.md
shotspotter/notebooks/: analysis.ipynb  matching-shootings-alerts.ipynb  rfds-cleaning.ipynb  shootings-cleaning.ipynb  shotspotter-cleaning.ipynb
